[package]
name = "solana-casino-smart-contract"
version = "0.1.0"
description = "Provably fair Solana casino smart contract with Dice and Plinko games"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_casino_smart_contract"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "~1.18.0"
switchboard-v2 = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
anchor-client = "0.30.1"
